# rem

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN_PRD_functional.md  DESIGN_PRD_terminal.md  DESIGN_PRD_theme.md  LICENSE  README.md  TODO.md
.claude/: settings.local.json
docs/: index.html
src/: app.rs  archive.rs  comms.rs  config.rs  diff.rs  favorites.rs  frecency.rs  gitstatus.rs  highlight.rs  input.rs  logo.rs  main.rs  marks.rs  nav.rs  ops.rs  palette.rs  preview.rs  session.rs  symbols.rs  sysmon.rs  tags.rs  throbber.rs  watcher.rs
src/ui/: boot.rs  breadcrumb.rs  comms_selector.rs  diffview.rs  disk_usage.rs  editor.rs  footer.rs  header.rs  list.rs  mod.rs  preview.rs  sidebar.rs  statusbar.rs  telemetry.rs  theme_picker.rs
