[package]
name = "rem"
version = "1.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
fuzzy-matcher = "0.3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
sysinfo = "0.34"
ignore = "0.4.25"
sha2 = "0.10"
zip = { version = "2", default-features = false, features = ["deflate"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
